refactor: usage of explicit type instead of var